[tool.poetry]
name = "invest-dash"
version = "0.1.0"
description = "investment dashboard POC in python"
authors = ["Christian Rivera"]
readme = "README.md"
packages = [{include = "invest_dash"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.13.0"
flake8 = "^6.1.0"
pandas = "^2.1.0"
scipy = {version = "^1.11.2", python = "3.10"}
pandas-datareader = "^0.10.0"
yfinance = "^0.2.28"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
